# scum_staking_metadata

./: .gitignore  Anchor.toml  README.md
devnet_tests/: get_num_registered.ts  initialize_state.ts  metaplex_metadata_validation.ts  reopen_registration.ts
programs/nft_staking/: Cargo.toml
programs/nft_staking/src/: lib.rs
tests/: nft_staking.ts
